ffmpeg: return AVERROR_EOF instead of 0 on stream end

Fixes: #18877
Change-Id: I1ce8b14089570fa42526819b8cb961a45998020b
Reviewed-on: https://review.haiku-os.org/c/haiku/+/7601
Haiku-Format: Haiku-format Bot <no-reply+haikuformatbot@haiku-os.org>
Reviewed-by: Jérôme Duval <jerome.duval@gmail.com>